<resources>
    <string name="app_name">final_photographer_matching</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_my_page">MyPage</string>
    <string name="identification_picture">증명사진</string>
    <string name="profile">프로필</string>
    <string name="body_profile">바디프로필</string>
    <string name="snapshot">스냅</string>
    <string name="reversation">예약 내역</string>
    <string name="notice">공지사항</string>
    <string name="event">이벤트</string>
    <string name="recommend">추천 작가, 스튜디오</string>
    <string name="faq">FAQ</string>
    <string name="register">스튜디오 입점 및 작가 등록 문의</string>
    <string name="nickname">닉네임</string>
    <string name="point">포인트</string>
    <string name="new_photographer">신규 작가, 스튜디오</string>
    <string name="photo_kind">사진 종류별 둘러보기</string>
    <string name="whole">전체보기</string>
    <string name="scrap">스크랩</string>
    <string name="profile_register">포토폴리오 관리하기</string>
    <string name="my_picture_look">내 사진 모아보기</string>
    <string name="location_sample_1">서울 마포구</string>
    <string name="hash_tag">해쉬 태그</string>
    <string name="location">활동 장소, 지역</string>
    <string name="price">가격</string>
    <string name="save">저장하기</string>
    <string name="review">리뷰</string>
    <string name="chatting">채팅하기</string>
    <string name="photo_category">사진 종류</string>
    <string name="time">촬영 가능 시간</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>