<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.final_photographer_matching.view.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.final_photographer_matching.view.fragment.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_my_page"
        android:name="com.example.final_photographer_matching.view.fragment.MyPageFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_mypage" />


    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.example.final_photographer_matching.view.fragment.NotificationFragment"
        android:label="Notification"
        tools:layout="@layout/fragment_notification" />


    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.final_photographer_matching.view.fragment.ChatFragment"
        android:label="Notification"
        tools:layout="@layout/fragment_chat" />


</navigation>