<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="190dp"
        android:layout_height="250dp"
        android:id="@+id/home_cardViewMain"
        app:contentPadding="4dp"
        android:layout_margin="6dp"
        android:foreground="?selectableItemBackground"
        android:clickable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardViewCL"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="2dp"
                app:cardCornerRadius="10dp"
                >

                <ImageView
                    android:id="@+id/home_card_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/teal_700"
                    />


            </androidx.cardview.widget.CardView>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                >

                <TextView
                    android:id="@+id/home_card_nickname_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dohyeon_regular"
                    android:text="mynickname1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp"
                    >
                </TextView>

                <TextView
                    android:id="@+id/home_card_star_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dohyeon_regular"
                    android:text="4.5"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="10dp"
                    >
                </TextView>

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/ic_baseline_star_24"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="30dp"
                    app:tint="#FFEB3B"
                    >

                </ImageView>

                <TextView
                    android:id="@+id/home_card_location_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dohyeon_regular"
                    android:text="@string/location_sample_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:textSize="12sp"

                    >
                </TextView>



                <TextView
                    android:id="@+id/home_card_kind_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dohyeon_regular"
                    android:text="@string/identification_picture"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="40dp"
                    android:textSize="12sp"
                    >
                </TextView>

                <TextView
                    android:id="@+id/home_card_hashtag_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dohyeon_regular"
                    android:text="@string/hash_tag"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="60dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    >
                </TextView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    app:contentPadding="2dp"
                    android:backgroundTint="@color/pink"
                    android:foreground="?selectableItemBackground"
                    android:layout_marginStart="54dp"
                    android:layout_marginTop="58dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="#단아한"
                        android:textColor="@color/main_color"
                        android:textSize="10sp"
                        android:fontFamily="@font/dohyeon_regular"
                        >
                    </TextView>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    app:contentPadding="2dp"
                    android:backgroundTint="@color/pink"
                    android:foreground="?selectableItemBackground"
                    android:layout_marginStart="94dp"
                    android:layout_marginTop="58dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="#화사한"
                        android:textColor="@color/main_color"
                        android:textSize="10sp"
                        android:fontFamily="@font/dohyeon_regular"
                        >
                    </TextView>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    app:contentPadding="2dp"
                    android:backgroundTint="@color/pink"
                    android:foreground="?selectableItemBackground"
                    android:layout_marginStart="134dp"
                    android:layout_marginTop="58dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="#화사한"
                        android:textColor="@color/main_color"
                        android:textSize="10sp"
                        android:fontFamily="@font/dohyeon_regular"
                        >
                    </TextView>
                </androidx.cardview.widget.CardView>



            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>
